# system-analyzer

./: .gitignore  CMakeLists.txt  README.md  test.json
include/: metrics.h  monitor.h  output.h  parser.h
include/metrics/: cpu-metric.h  metric.h  ram-metric.h
src/: main.cpp  metrics.cpp  monitor.cpp  output.cpp  parser.cpp
src/metrics/: cpu-metric.cpp  ram-metric.cpp
